[package]
name = "bevy_prng"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "A crate providing newtyped RNGs for integration into Bevy."
repository = { workspace = true }
license = { workspace = true }
keywords = ["game", "bevy", "rand", "rng"]
categories = ["game-engines", "algorithms"]
exclude = ["/.*"]
rust-version = { workspace = true }

[features]
default = []
std = ["rand_chacha?/std"]
serialize = [
    "dep:serde",
    "rand_core/serde",
    "rand_chacha?/serde",
    "rand_pcg?/serde",
    "rand_xoshiro?/serde",
    "wyrand?/serde1",
]
rand_chacha = ["dep:rand_chacha"]
wyrand = ["dep:wyrand"]
rand_pcg = ["dep:rand_pcg"]
rand_xoshiro = ["dep:rand_xoshiro"]
compat = ["dep:rand_core_06"]

[dependencies]
bevy_reflect.workspace = true
rand_core.workspace = true
rand_core_06 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
wyrand = { workspace = true, optional = true }
rand_pcg = { workspace = true, optional = true }
rand_xoshiro = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
