[package]
name = "bevy_prng"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "A crate providing newtyped RNGs for integration into Bevy."
repository = { workspace = true }
license = { workspace = true }
keywords = ["game", "bevy", "rand", "rng"]
categories = ["game-engines", "algorithms"]
exclude = ["/.*"]
rust-version = { workspace = true }

[features]
default = []
std = ["rand_chacha?/std"]
thread_local_entropy = ["dep:rand_chacha", "std"]
bevy_reflect = ["dep:bevy_reflect"]
serialize = [
    "dep:serde",
    "rand_core/serde",
    "rand_chacha?/serde",
    "rand_pcg?/serde",
    "rand_xoshiro?/serde",
    "wyrand?/serde1",
]
rand_chacha = ["dep:rand_chacha"]
wyrand = ["dep:wyrand"]
rand_pcg = ["dep:rand_pcg"]
rand_xoshiro = ["dep:rand_xoshiro"]
compat_09 = ["dep:rand_core_09"]
compat_06 = ["dep:rand_core_06"]

[dependencies]
getrandom = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true, optional = true }
rand_core.workspace = true
rand_core_09 = { workspace = true, optional = true }
rand_core_06 = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
rand_chacha = { workspace = true, optional = true }
wyrand = { workspace = true, optional = true }
rand_pcg = { workspace = true, optional = true }
rand_xoshiro = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
