[package]
name = "bevy_prng"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "A crate providing newtyped RNGs for integration into Bevy."
repository = { workspace = true }
license = { workspace = true }
keywords = ["game", "bevy", "rand", "rng"]
categories = ["game-engines", "algorithms"]
exclude = ["/.*"]
rust-version = { workspace = true }

[features]
default = []
std = []
thread_local_entropy = ["dep:chacha20", "std"]
bevy_reflect = ["dep:bevy_reflect"]
serialize = [
    "dep:serde",
    "rand_pcg?/serde",
    "rand_xoshiro?/serde",
    "wyrand?/serde1",
]
chacha20 = ["dep:chacha20"]
wyrand = ["dep:wyrand"]
rand_pcg = ["dep:rand_pcg"]
rand_xoshiro = ["dep:rand_xoshiro"]
compat_09 = ["dep:rand_core_09"]
compat_06 = ["dep:rand_core_06"]

[dependencies]
getrandom = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true, optional = true }
rand_core.workspace = true
rand_core_09 = { workspace = true, optional = true }
rand_core_06 = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
chacha20 = { workspace = true, optional = true, features = ["rng"] }
wyrand = { workspace = true, optional = true }
rand_pcg = { workspace = true, optional = true }
rand_xoshiro = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
